<resources>
    <string name="app_name">RoommateFinder</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="userImageContentDescription">The user\'s image</string>
    <string name="filterPosts">Filter</string>
    <string name="postFeed">Feed</string>
    <string name="userPosts">My Posts</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_register">Register</string>

    <string name="profile_prompt">Change Profile Settings</string>
    <string name="save_changes">Save Changes</string>
    <string name="first_name_prompt">First Name</string>
    <string name="last_name_prompt">Last Name</string>
    <string name="phone_number_prompt">Phone Number</string>
    <string name="age_prompt">Age</string>

    <string name="choosePreferencesPrompt">My Preferences</string>
    <string name="timeToSleepHint">21</string>
    <string name="socialLevelHint">3</string>
    <string name="cleanlinessHint">5</string>
    <string name="priceHint">350</string>
    <string name="typehint">M</string>
    <string name="contractHint">Ends Feb</string>
</resources>